also hab noch ein zwei testst geschreiben und das plugin jacoco instaliert fuer die test coverrage